# scilight

./: README.md  setup.cfg  setup.py
.circleci/: config.yml
examples/: calculate_dna_gcfraction.py
scilight/: __init__.py
tests/: test_scilight.py
