[metadata]
name = scilight
version = v0.4.0
description = Workflow library in pure python, for executing shell commands saving data to the file system without re-executing already executed tasks.
long_description = file: README.md
long_description_content_type = text/markdown
author = Samuel Lampa
author_email = samuel.lampa@rilnet.com
url = https://github.com/samuell/scilight
license = MIT
keywords = workflows workflow pipeline task
packages = scilight
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
